# ui_dns

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
model/: app.py
model/components/: authorization.py
model/controls/: base_controls.py
model/data/: users.py
model/pages/: feedback_page.py  main_page.py  profile_page.py  select_page.py
model/utils/: city_parse.py  date_generator.py  helpers.py
tests/: README.md  conftest.py  test_ui.py
