[tool.poetry]
name = "dns_ui"
version = "0.1.0"
description = ""
authors = ["andrechizh8 <andrechizh.ru@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^7.2.2"
allure-pytest = "^2.13.0"
selene = "2.0.0.b16"
faker = "^17.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
